2010-06-04 11:28  paddockd

	* [r162] ChangeLog, makefile.linux24-alsa-display,
	  makefile.linux24-display, makefile.linux26-alsa-display,
	  makefile.linux26-display, makefile.linux26-i64-alsa-display,
	  makefile.linux26-mips-oss, makefile.linux26-ppc-alsa-display,
	  makefile.mingw32-asio-display, makefile.mingw32-display,
	  makefile.mingw32-wasapi-display, makefile.osxintel-display,
	  makefile.osxppc-display, makefile.s10intel-display,
	  makefile.s10sparc-display, makefile.s9sparc-display,
	  sources/libogg-1.2.0.tar.bz2, sources/libvorbis-1.3.1.tar.bz2,
	  sources/portaudio-r1508.tar.gz, src/squeezeslave/squeezeslave.c:
	  Upgraded libogg to v1.2.0.
	  Upgraded libvorbis to v1.3.1.
	  Upgraded PADEV to r1508.
	  Increased version to 162.

2010-05-27 11:43  paddockd

	* [r161] ChangeLog, TODO, makefile.s10sparc-display,
	  src/squeezeslave/squeezeslave.c: Reverted r135
	  makefile.s10sparc-display as change caused compile of libvorbis
	  example directory to fail.
	  Increased version to 161.

2010-05-22 12:40  paddockd

	* [r160] ChangeLog, scripts/buildall-win32,
	  sources/portaudio-r1485.tar.gz: Deleted obsolete portaudio
	  source.
	  Fixed windows build script.

2010-05-20 12:52  paddockd

	* [r159] ChangeLog, TODO, makefile.linux24-alsa-display,
	  makefile.linux26-alsa-display, makefile.linux26-i64-alsa-display,
	  makefile.linux26-ppc-alsa-display, makefile.mingw32-asio-display,
	  makefile.mingw32-display, makefile.mingw32-wasapi-display,
	  makefile.osxintel-display, makefile.osxppc-display,
	  sources/portaudio-r1495.tar.gz, sources/portaudio-r1496.tar.gz,
	  sources/portaudio-r1500.tar.gz, src/squeezeslave/squeezeslave.c:
	  Deleted obsolete portaudio sources.
	  Updated all makefiles to use latest PADEV r1500.
	  Increased version to 159.

2010-05-16 19:54  paddockd

	* [r158] ChangeLog, makefile.linux24-alsa-display,
	  makefile.linux26-alsa-display, makefile.linux26-i64-alsa-display,